--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ THE SOFTWARE.
     <groupId>org.jenkins-ci</groupId>
     <artifactId>jenkins</artifactId>
     <version>1.115</version>
-    <relativePath />
+<!--    <relativePath />-->
   </parent>
 
   <groupId>org.jenkins-ci.main</groupId>
